# nn_mnist

./: .gitignore  Base_NN_architecture.py  README.md  config.toml  pyproject.toml
config_utils/: config_ex.toml  config_parser.py  model_factory.py
data/: MNIST_downloader.py
example_usage/: optimizer_example.py  training_example.py
example_usage/dense_model_from_config/: dense_model_from_config.py  simple_dense_config.toml
layers/: dense_layer.py  vanilla_low_rank.py
report_figures_code/: DenseVsDynamo.py  basicdense_vs_basic_lowrank.ipynb  classdiagram.plantuml  parameters_vs_performance.py  parameters_vs_performance_low_rank.ipynb
report_figures_code/config_files/: basedense.toml  basedynamiclowrank.toml  config_rank_10.toml  config_rank_11.toml  config_rank_12.toml  config_rank_13.toml  config_rank_14.toml  config_rank_15.toml  config_rank_16.toml  config_rank_17.toml  config_rank_18.toml  config_rank_19.toml  config_rank_20.toml  config_rank_21.toml  config_rank_22.toml  config_rank_23.toml  config_rank_24.toml  config_rank_25.toml  config_rank_26.toml  config_rank_27.toml  config_rank_28.toml  config_rank_29.toml  config_rank_30.toml  config_rank_31.toml  config_rank_32.toml  config_rank_33.toml  config_rank_34.toml  config_rank_35.toml  config_rank_36.toml  config_rank_37.toml  config_rank_38.toml  config_rank_39.toml  config_rank_40.toml  config_rank_41.toml  config_rank_42.toml  config_rank_43.toml  config_rank_44.toml  config_rank_45.toml  config_rank_46.toml  config_rank_47.toml  (+7 more)
report_figures_code/data/: best_model_at_epoch_1.pt  (+17 more)
(+51 files in other folders)
